@@ -13,6 +13,7 @@
         <maven.compiler.target>21</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <javafx.version>21.0.2</javafx.version>
+        <slf4j.version>2.0.13</slf4j.version>
     </properties>
 
     <!-- ===================== DEPENDENCIES ===================== -->
@@ -36,10 +37,11 @@
         <dependency>
             <groupId>com.mysql</groupId>
             <artifactId>mysql-connector-j</artifactId>
-            <version>8.4.0</version>
+            <version>9.6.0</version>
+            <scope>compile</scope>
         </dependency>
 
-        <!-- Hikari -->
+        <!-- HikariCP -->
         <dependency>
             <groupId>com.zaxxer</groupId>
             <artifactId>HikariCP</artifactId>
@@ -59,6 +61,17 @@
             <version>${javafx.version}</version>
         </dependency>
 
+        <!-- ===================== FIX SLF4J ===================== -->
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-simple</artifactId>
+            <version>${slf4j.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
+            <version>1.5.6</version>
+        </dependency>
     </dependencies>
 
     <!-- ===================== BUILD ===================== -->
@@ -83,13 +96,18 @@
                 <version>0.0.8</version>
 
                 <configuration>
-                    <!-- ⚠️ IMPORTANT -->
+                    <!-- ⚠️ IMPORTANT: mets ton package complet -->
                     <mainClass>InterfaceGraphiqueChat</mainClass>
+
+                    <!-- FIX Java 21 warning -->
+                    <options>
+                        <option>--enable-native-access=javafx.graphics</option>
+                    </options>
+
                 </configuration>
 
             </plugin>
 
         </plugins>
     </build>
-
 </project>
